--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,10 @@
     },
     "require-dev": {
         "nunomaduro/collision": "^5.3",
+        "nunomaduro/larastan": "^1.0",
         "orchestra/testbench": "^6.15",
         "pestphp/pest": "^1.18",
-        "pestphp/pest-plugin-laravel": "^1.1",
-        "spatie/laravel-ray": "^1.23",
-        "vimeo/psalm": "^4.8"
+        "pestphp/pest-plugin-laravel": "^1.1"
     },
     "autoload": {
         "psr-4": {
@@ -41,6 +40,7 @@
     },
     "scripts": {
         "test": "./vendor/bin/pest --no-coverage",
+        "larastan": "./vendor/bin/phpstan analyse",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
     "config": {
@@ -50,7 +50,10 @@
         "laravel": {
             "providers": [
                 "Spatie\\LaravelAutoDiscoverer\\LaravelAutoDiscovererServiceProvider"
-            ]
+            ],
+            "aliases": {
+                "Discover": "Spatie\\LaravelAutoDiscoverer\\Facades\\Discover"
+            }
         }
     },
     "minimum-stability": "dev",
