--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
     "require": {
         "php": "^8.0",
         "spatie/laravel-package-tools": "^1.4.3",
-        "illuminate/contracts": "^v8.69.0"
+        "illuminate/contracts": "^8.69.0|^9.0"
     },
     "require-dev": {
         "nunomaduro/collision": "^5.3",
-        "nunomaduro/larastan": "^1.0",
+        "nunomaduro/larastan": "^2.0|^1.0",
         "orchestra/testbench": "^6.15",
         "pestphp/pest": "^1.18",
         "pestphp/pest-plugin-laravel": "^1.1"
@@ -40,11 +40,14 @@
     },
     "scripts": {
         "test": "./vendor/bin/pest --no-coverage",
-        "larastan": "./vendor/bin/phpstan analyse",
+        "analyse": "./vendor/bin/phpstan analyse",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
