--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "illuminate/contracts": "^8.69.0|^9.0"
     },
     "require-dev": {
-        "nunomaduro/collision": "^5.3",
+        "nunomaduro/collision": "^6.0|^5.3",
         "nunomaduro/larastan": "^2.0|^1.0",
-        "orchestra/testbench": "^6.15",
+        "orchestra/testbench": "^7.0|^6.15",
         "pestphp/pest": "^1.18",
         "pestphp/pest-plugin-laravel": "^1.1"
     },
@@ -53,10 +53,7 @@
         "laravel": {
             "providers": [
                 "Spatie\\LaravelAutoDiscoverer\\LaravelAutoDiscovererServiceProvider"
-            ],
-            "aliases": {
-                "Discover": "Spatie\\LaravelAutoDiscoverer\\Facades\\Discover"
-            }
+            ]
         }
     },
     "minimum-stability": "dev",
