--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,5 @@
 includes:
+    - phpstan-baseline.neon
     - ./vendor/nunomaduro/larastan/extension.neon
 
 parameters:
@@ -7,9 +8,10 @@ parameters:
         - src
 
     # The level 9 is the highest level
-    level: 5
+    level: 7
 
     excludePaths:
         - ./*/*/FileToBeExcluded.php
 
     checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false
