--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "orchestra/testbench": "^7.0|^6.15",
         "pestphp/pest": "^1.18",
         "pestphp/pest-plugin-laravel": "^1.1",
+        "spatie/invade": "^1.1",
         "spatie/laravel-ray": "^1.30"
     },
     "autoload": {
