--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -6,12 +6,12 @@ parameters:
 			path: src/ClassDiscoverer.php
 
 		-
-			message: "#^Parameter \\#1 \\$callback of method Illuminate\\\\Support\\\\Collection\\<\\(int\\|string\\),mixed\\>\\:\\:mapSpread\\(\\) expects callable\\(mixed\\)\\: array\\{Spatie\\\\LaravelAutoDiscoverer\\\\DiscoverProfile, Illuminate\\\\Support\\\\Collection\\}, Closure\\(Spatie\\\\LaravelAutoDiscoverer\\\\DiscoverProfile, Illuminate\\\\Support\\\\Collection\\)\\: array\\{Spatie\\\\LaravelAutoDiscoverer\\\\DiscoverProfile, Illuminate\\\\Support\\\\Collection\\} given\\.$#"
+			message: "#^Parameter \\#1 \\$callback of method Illuminate\\\\Support\\\\Collection\\<\\(int\\|string\\),mixed\\>\\:\\:mapSpread\\(\\) expects callable\\(mixed\\)\\: array\\{Spatie\\\\StructureDiscoverer\\\\DiscoverProfile, Illuminate\\\\Support\\\\Collection\\}, Closure\\(Spatie\\\\StructureDiscoverer\\\\DiscoverProfile, Illuminate\\\\Support\\\\Collection\\)\\: array\\{Spatie\\\\StructureDiscoverer\\\\DiscoverProfile, Illuminate\\\\Support\\\\Collection\\} given\\.$#"
 			count: 1
 			path: src/Discover.php
 
 		-
-			message: "#^Parameter \\#1 \\$callback of method Illuminate\\\\Support\\\\Collection\\<\\(int\\|string\\),mixed\\>\\:\\:mapSpread\\(\\) expects callable\\(mixed\\)\\: string, Closure\\(Spatie\\\\LaravelAutoDiscoverer\\\\DiscoverProfile, Illuminate\\\\Support\\\\Collection\\)\\: string given\\.$#"
+			message: "#^Parameter \\#1 \\$callback of method Illuminate\\\\Support\\\\Collection\\<\\(int\\|string\\),mixed\\>\\:\\:mapSpread\\(\\) expects callable\\(mixed\\)\\: string, Closure\\(Spatie\\\\StructureDiscoverer\\\\DiscoverProfile, Illuminate\\\\Support\\\\Collection\\)\\: string given\\.$#"
 			count: 1
 			path: src/Discover.php
 
