--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "spatie/php-structure-discoverer",
-    "description": "Automatically discover classes within your PHP application",
+    "description": "Automatically discover structures within your PHP application",
     "keywords": [
-        "PHPStructureDiscoverer",
         "laravel",
         "php",
+        "discover",
         "php-structure-discoverer"
     ],
     "homepage": "https://github.com/spatie/php-structure-discoverer",
@@ -20,23 +20,26 @@
         "php": "^8.1",
         "amphp/parallel": "^1.4",
         "amphp/parallel-functions": "^1.1",
-        "illuminate/collections": "^8.69.0|^9.0",
-        "spatie/async": "^1.5",
+        "illuminate/collections": "^9.30",
         "spatie/laravel-package-tools": "^1.4.3"
     },
     "require-dev": {
-        "nunomaduro/collision": "^6.0|^5.3",
-        "nunomaduro/larastan": "^2.0|^1.0",
-        "orchestra/testbench": "^7.0|^6.15",
-        "pestphp/pest": "^1.18",
+        "illuminate/console": "^9.30",
+        "laravel/pint": "^1.0",
+        "nunomaduro/collision": "^6.0",
+        "nunomaduro/larastan": "^2.0.1",
+        "orchestra/testbench": "^7.0",
+        "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
-        "spatie/invade": "^1.1",
-        "spatie/laravel-ray": "^1.30"
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan-deprecation-rules": "^1.0",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpunit/phpunit": "^9.5",
+        "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
         "psr-4": {
-            "Spatie\\StructureDiscoverer\\": "src",
-            "Spatie\\StructureDiscoverer\\Database\\Factories\\": "database/factories"
+            "Spatie\\StructureDiscoverer\\": "src"
         }
     },
     "autoload-dev": {
@@ -45,14 +48,17 @@
         }
     },
     "scripts": {
-        "test": "./vendor/bin/pest --no-coverage",
-        "analyse": "./vendor/bin/phpstan analyse",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+        "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
+        "analyse": "vendor/bin/phpstan analyse",
+        "test": "vendor/bin/pest",
+        "test-coverage": "vendor/bin/pest --coverage",
+        "format": "vendor/bin/pint"
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
         }
     },
     "extra": {
