--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     ],
     "require": {
         "php": "^8.1",
+        "amphp/amp": "^2.6.2",
         "amphp/parallel": "^1.4.1",
         "amphp/parallel-functions": "^1.1",
         "illuminate/collections": "^9.30",
