--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
         "spatie/laravel-package-tools": "^1.4.3"
     },
     "require-dev": {
-        "illuminate/console": "^9.30",
+        "illuminate/console": "^9.30|^10.0",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^2.0.1",
-        "orchestra/testbench": "^7.0",
+        "orchestra/testbench": "^7.0|^8.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
