--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -4,11 +4,13 @@ on:
   push:
     paths:
       - '**.php'
-      - 'phpstan.neon.dist'
+      - 'phpstan.neon'
+      - 'phpstan-baseline.neon'
   pull_request:
     paths:
       - '**.php'
-      - 'phpstan.neon.dist'
+      - 'phpstan.neon'
+      - 'phpstan-baseline.neon'
 
 
 jobs:
