Add requried dependency

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "amphp/parallel": "^1.4.1",
         "amphp/parallel-functions": "^1.1",
         "illuminate/collections": "^9.30|^10.0",
-        "spatie/laravel-package-tools": "^1.4.3"
+        "spatie/laravel-package-tools": "^1.4.3",
+        "symfony/finder" : "^6.0"
     },
     "require-dev": {
         "illuminate/console": "^9.30|^10.0",
