--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "php": "^8.1",
         "amphp/amp": "^v3.0",
         "amphp/parallel": "^2.2",
-        "illuminate/collections": "^9.30|^10.0",
+        "illuminate/collections": "^9.30|^10.0|^11.0",
         "spatie/laravel-package-tools": "^1.4.3",
         "symfony/finder" : "^6.0|^7.0"
     },
@@ -29,13 +29,13 @@
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^2.0.1",
-        "orchestra/testbench": "^7.0|^8.0",
+        "orchestra/testbench": "^7.0|^8.0|^9.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.5|^10.0",
         "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
