--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.1, 8.2, 8.3 ]
-        laravel: [ 9.*, 10.*, 10.* ]
+        laravel: [ 9.*, 10.*, 10.*, 11.* ]
         stability: [ prefer-lowest, prefer-stable ]
         include:
           - laravel: 9.*
