--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,6 +23,11 @@ jobs:
             testbench: 8.*
           - laravel: 11.*
             testbench: 9.*
+        exlude:
+          - php: 8.3
+            laravel: 9.*
+          - php: 8.1
+            laravel: 11.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
