--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,7 +23,7 @@ jobs:
             testbench: 8.*
           - laravel: 11.*
             testbench: 9.*
-        exlude:
+        exclude:
           - php: 8.3
             laravel: 9.*
           - php: 8.1
