--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
         "symfony/finder" : "^6.0|^7.0"
     },
     "require-dev": {
-        "illuminate/console": "^9.30|^10.0",
+        "illuminate/console": "^9.30|^10.0|^11.0",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^2.0.1",
         "orchestra/testbench": "^7.0|^8.0|^9.0",
-        "pestphp/pest": "^1.21",
+        "pestphp/pest": "^1.21|^2.0",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
