--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "nunomaduro/larastan": "^2.0.1",
         "orchestra/testbench": "^7.0|^8.0|^9.0",
         "pestphp/pest": "^1.21|^2.0",
-        "pestphp/pest-plugin-laravel": "^1.1",
+        "pestphp/pest-plugin-laravel": "^1.1|^2.0",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
