--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,18 +14,14 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.1, 8.2, 8.3 ]
-        laravel: [ 9.*, 10.*, 10.*, 11.* ]
+        laravel: [10.*, 11.* ]
         stability: [ prefer-lowest, prefer-stable ]
         include:
-          - laravel: 9.*
-            testbench: 7.*
           - laravel: 10.*
             testbench: 8.*
           - laravel: 11.*
             testbench: 9.*
         exclude:
-          - php: 8.3
-            laravel: 9.*
           - php: 8.1
             laravel: 11.*
 
