--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -6,6 +6,11 @@ parameters:
 			path: src/Data/DiscoveredClass.php
 
 		-
+			message: "#^Casting class ReflectionType to string is deprecated\\.$#"
+			count: 2
+			path: src/Data/DiscoveredEnum.php
+
+		-
 			message: "#^Parameter \\$file of class Spatie\\\\StructureDiscoverer\\\\Data\\\\DiscoveredEnum constructor expects string, string\\|false given\\.$#"
 			count: 1
 			path: src/Data/DiscoveredEnum.php
@@ -19,11 +24,6 @@ parameters:
 			message: "#^Parameter \\$file of class Spatie\\\\StructureDiscoverer\\\\Data\\\\DiscoveredTrait constructor expects string, string\\|false given\\.$#"
 			count: 1
 			path: src/Data/DiscoveredTrait.php
-
-		-
-			message: "#^Unable to resolve the template type T in call to function Amp\\\\Promise\\\\wait$#"
-			count: 1
-			path: src/DiscoverWorkers/ParallelDiscoverWorker.php
 
 		-
 			message: "#^Match arm is unreachable because previous comparison is always true\\.$#"
