--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "php": "^8.1",
         "amphp/amp": "^v3.0",
         "amphp/parallel": "^2.2",
-        "illuminate/collections": "^10.0|^11.0",
+        "illuminate/collections": "^10.0|^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.4.3",
         "symfony/finder": "^6.0|^7.0"
     },
