--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "illuminate/console": "^10.0|^11.0|^12.0",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.0|^8.0",
-        "nunomaduro/larastan": "^2.0.1",
+        "larastan/larastan": "^2.0.1|^3.0",
         "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
         "pestphp/pest": "^2.0|^3.0",
         "pestphp/pest-plugin-laravel": "^2.0|^3.0",
