--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,12 @@
     ],
     "require": {
         "php": "^8.1",
-        "amphp/amp": "^v3.0",
-        "amphp/parallel": "^2.2",
         "illuminate/collections": "^10.0|^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.4.3",
         "symfony/finder": "^6.0|^7.0"
     },
     "require-dev": {
+        "amphp/parallel": "^2.2",
         "illuminate/console": "^10.0|^11.0|^12.0",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.0|^8.0",
@@ -36,6 +35,9 @@
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5|^10.0|^11.5.3",
         "spatie/laravel-ray": "^1.26"
+    },
+    "suggest" : {
+        "amphp/parallel": "When you want to use the Parallel discover worker"
     },
     "autoload": {
         "psr-4": {
