--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "amphp/parallel-functions": "^1.1",
         "illuminate/collections": "^9.30|^10.0",
         "spatie/laravel-package-tools": "^1.4.3",
-        "symfony/finder" : "^6.0"
+        "symfony/finder" : "^6.0 || ^7.0 || ^8.0"
     },
     "require-dev": {
         "illuminate/console": "^9.30|^10.0",
