--- a/composer.json
+++ b/composer.json
@@ -17,23 +17,22 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "illuminate/collections": "^10.0|^11.0|^12.0",
+        "php": "^8.3",
+        "illuminate/collections": "^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.4.3",
         "symfony/finder": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "amphp/parallel": "^2.2",
-        "illuminate/console": "^10.0|^11.0|^12.0",
+        "illuminate/console": "^11.0|^12.0",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.0|^8.0",
         "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
-        "pestphp/pest": "^2.0|^3.0",
+        "pestphp/pest": "^3.0|^4.0",
         "pestphp/pest-plugin-laravel": "^2.0|^3.0",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5|^10.0|^11.5.3",
         "spatie/laravel-ray": "^1.26"
     },
     "suggest" : {
