--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,9 @@
     "require-dev": {
         "amphp/parallel": "^2.2",
         "illuminate/console": "^11.0|^12.0",
-        "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.0|^8.0",
-        "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
-        "pestphp/pest": "^3.0|^4.0",
+        "orchestra/testbench": "^9.0|^10.0",
+        "pestphp/pest": "^4.0",
         "pestphp/pest-plugin-laravel": "^2.0|^3.0",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
