--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "nunomaduro/collision": "^7.0|^8.0",
         "orchestra/testbench": "^9.0|^10.0",
         "pestphp/pest": "^4.0",
-        "pestphp/pest-plugin-laravel": "^2.0|^3.0",
+        "pestphp/pest-plugin-laravel": "^4.0",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
