--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
         "illuminate/console": "^11.0|^12.0",
         "nunomaduro/collision": "^7.0|^8.8.3",
         "orchestra/testbench": "^9.0|^10.0",
-        "pestphp/pest": "^4.1.4",
-        "pestphp/pest-plugin-laravel": "^4.0",
+        "pestphp/pest": "^3.0|^4.1.4",
+        "pestphp/pest-plugin-laravel": "^3.0|^4.0",
         "phpstan/extension-installer": "^1.4.3",
         "phpstan/phpstan-deprecation-rules": "^1.2.1",
         "phpstan/phpstan-phpunit": "^1.4.2",
